Rename `RootLayout` and fix HTML height issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
 
     <!-- Styling -->
     <style>
-      html, body, #app {
+      html {
+        display: flex;
+        min-height: 100%;
+      }
+      body {
+        flex: 1;
+      }
+      #app {
         height: 100%;
       }
     </style>
