--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
 
+    <!-- Inter font -->
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
     <!-- Icons -->
     <link rel="icon" href="/favicon.png">
 
